#111 - Fix styling issues when bar overlaps link in Summary.

--- a/src/Money.UI.Backend/wwwroot/css/site.css
+++ b/src/Money.UI.Backend/wwwroot/css/site.css
@@ -46,7 +46,7 @@
 
 
 .outcomes {
-    margin-bottom: -15px;
+    margin-bottom: -20px;
 }
 
 .bar-graph {
@@ -55,25 +55,30 @@
     box-shadow: none;
 }
 
+.bar-graph:hover {
+    background-color: #f5f5f5;
+}
+
 .bar-graph .panel-body {
     position: relative;
     height: 60px;
 }
 
-.bar-graph .description, .bar-graph .value {
-    position: absolute;
-    width: calc(100% - 30px);
-}
-
 .bar-graph .description {
     position: absolute;
-    width: calc(100% - 30px);
     margin: 0;
     font-weight: normal;
+    display: inline;
+    z-index: 1;
 }
 
 .bar-graph .description .name {
     font-size: 16px;
+}
+
+.bar-graph .value {
+    position: absolute;
+    width: calc(100% - 30px);
 }
 
 .bar-graph .amount {
@@ -103,10 +108,6 @@
 }
 
 
-
-.outcomes.table {
-    margin-bottom: -20px;
-}
 
 .outcomes .actions {
     float: right;
